<resources>
    <string name="app_name">Location Based Notes App</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>
    <string name="logout">Logout</string>
    <string name="title_activity_update_note">UpdateNoteActivity</string>
    <string name="add_note">Add Note</string>
    <string name="note_date">Note Date</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
</resources>