<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/orange"
android:orientation="vertical"
tools:context=".UpdateNoteActivity">
    <ImageView
        android:id="@+id/imExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_exit" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



    <TextView
        android:id="@+id/tvTitleAddUpdateNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        android:text="@string/add_note" />

    <Button
        android:id="@+id/etNoteDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        android:hint="@string/note_date"
        android:padding="8dp"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="48dp"

        android:layout_margin="10dp"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="14sp"
        tools:ignore="Autofill"
        />

    <EditText
        android:id="@+id/etNoteBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/body"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:padding="8dp"
        android:textSize="14sp"
        tools:ignore="Autofill"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddUpdateNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:drawableEnd="@drawable/ic_edit"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDeleteUpdateNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:drawableEnd="@drawable/ic_delete"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    </LinearLayout>
</LinearLayout>